--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,10 +74,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Gothampro
-      fonts:
-        - asset: fonts/gothampro-black.ttf
+  # fonts:
+  #   - family: Gothampro
+  #     fonts:
+  #       - asset: fonts/gothampro-black.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
